k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flyfox
  labels:
    name: flyfox
    environment: production
